tests/paczka1/fuzzy1/83011002.err
Error in line 4: A204 S412 18,8
Error in line 3: QcrlfPQW S733 55,8
Error in line 19: pRMK7NQHjDT S733 73,5
Error in line 21: pRMK7NQHjDT S412 89,6
Error in line 25: BPr1iJUU S412 -1,5
Error in line 34: p
Error in line 36: apt0uwVj9L9 S733 1,79
